# for setup.cfg related doc, read this
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = kinoko
author = qianweishuo
author_email = qzy922@gmail.com
version = 1.1.0
description = python package for Japanese NLP and many other utils
url = https://github.com/koyo922/kinoko
license = MIT
# choose from PyPI official list of classifiers
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
# for index / search
keywords =
    NLP
    japanese

[options]
# package name, `find:` means auto-finding, configurable via `options.packages.find`
packages = find:
# one dep per line, requirement should be specified as loosely as possible
install_requires =
    arrow
    codecov
    docopt
    lazy-property
    pathlib2; python_version < "3.4"
    pyfunctional
    pytest
    redo
    requests
    six
    tqdm
    typing; python_version < "3.4"
    tornado<=4.4.2; python_version < "3.4"
    tornado; python_version >= "3.4"

tests_require =
    pytest
    pytest-mock
    mock; python_version < "3.4"

test_suite = kinoko.tests
include_package_data = True
# for pure python project, zip pack of source code may be consumed directly
zip_safe = False

# script files can be exposed like this
scripts =
    kinoko/sys/optparse.bash
    kinoko/sys/vmem.sh
    kinoko/sys/colormsg

# or like this (turning python function into command line tool)
# note that `[options.entry_points]` should be written after `[options]`
[options.entry_points]
console_scripts =
    patchtsv = kinoko.text.patch_tsv:main
    aggtsv = kinoko.text.agg_tsv:main
    chaseurl = kinoko.misc.network.chase_redirection:chase_url_cli

# adding non .py files (e.g. conf / data) like this, they get installed into `site-packages`
# only files (not folders) are supported
#[options.package_data]
#kinoko =
#    conf/*
#    data/*

[sdist]
dist_dir = output/dist

[bdist_wheel]
# if the project is compatible for python2/python3, set universal to 1
universal=1
dist_dir = output/dist
